--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -17,28 +17,25 @@
   background-color: rgb(252 165 165 / 1) !important;
 }
 
-/* Testing */
-/* .p-button:hover {
-  background-color: green !important;
-}	 */
-
-/* Standard theme for input bar */
-
 @layer components {
-  /* .p-inputswitch-checked .p-inputswitch-slider:checked {
-    @apply bg-red-300
-  } */
-
+  /* Login page image for monitor screen */
   .login-background {
     @apply h-full
     w-full
     rounded-l-2xl;
   }
 
-  .standardInputText {
+  .standardBar {
     @apply disabled:bg-slate-300
-    border-secondary
-    w-full;
+    h-12;
+  }
+
+  .standardBar.short {
+    @apply w-24;
+  }
+
+  .standardBar.full {
+    @apply w-full;
   }
 
   label {
@@ -51,37 +48,107 @@
     mb-2;
   }
 
+  /* Btn styling  */
   .btn {
-    @apply rounded-md
-    px-4
-    py-1 
-    m-1;
   }
 
-  /* Button styles */
+  /* Primary Button (prime react component, required !important to work) */
   .btn.primary {
-    @apply bg-primary
-    text-white
-    border-white;
+    @apply !bg-primary
+    !text-white
+    !border-white
+     !h-10;
   }
 
   .btn.primary:hover {
-    @apply hover:bg-red-200
-    hover:text-secondary
-    hover:border-secondary;
+    @apply !bg-red-200
+    !text-secondary
+    !border-secondary;
   }
 
+  /* Secondary button (styling for primereact component)*/
   .btn.secondary {
     @apply bg-gray-800
-    text-white
+    text-white;
   }
 
+  /* TODO: rename to sign in btn */
   .btn.secondary:hover {
-    @apply hover:bg-blue-200
-    hover:text-blue-900;
+    @apply !bg-blue-200
+    !text-blue-900;
   }
 
-  .btn.tertiary {
+  /* Menu Simple */
+  .menu {
+    @apply block
+    mt-2
+    xl:inline-block
+    xl:mt-0
+    text-black
+    text-base
+    box-border
+    xl:h-5
+    h-10
+    w-full
+    hover:text-red-400
+    mr-4
+    border-red-400
+    xl:text-center
+    text-left
+    p-2 lg:p-0
+    hover:bg-slate-100
+    lg:hover:bg-white
+    rounded-md;
+  }
+
+  .dropdown {
+    @apply px-5
+    py-1
+    cursor-pointer
+    hover:text-red-400
+    hover:bg-slate-100
+    rounded-md;
+  }
+
+  .card {
+    @apply rounded
+    container
+    py-1
+    px-4;
+  }
+
+  .card.secondary {
+    @apply bg-red-100
+    text-secondary;
+  }
+
+  .card.tertiary {
+    @apply bg-blue-100
+    text-blue-900
+    px-2;
+  }
+
+  /* TODO: standardise style for them */
+  .card.scrap {
+    @apply bg-red-100
+    text-secondary
+    /* rounded-none */
+    px-2;
+  }
+
+  .card.reuse {
+    @apply bg-green-100
+    text-green-900
+    /* rounded-none */
+    px-2;
+  }
+
+  .card-header-primary {
+    @apply text-xl
+    text-primary;
+  }
+
+  /* .btn.tertiary {
     @apply bg-yellow-500
     text-secondary
     hover:bg-yellow-200
@@ -93,6 +160,7 @@
     @apply rounded-full
     py-3;
   }
+
   .btn-round.green {
     @apply hover:bg-gray-800
     hover:text-white
@@ -109,22 +177,10 @@
     hover:bg-white
     border-2
     border-red-300;
-  }
+  } */
 
-  .card-secondary {
-    @apply rounded
-    container
-    bg-red-100
-    text-secondary
-    py-1
-    px-4;
-  }
-  .card-header-primary {
-    @apply text-xl 
-    text-primary;
-  }
-
-  input[type="radio"] {
+  /* Input Bar */
+  /* input[type="radio"] {
     @apply appearance-none
     rounded-full
     h-4 w-4 border
@@ -145,7 +201,6 @@
     cursor-pointer;
   }
 
-  /* Standard Styling for input bar */
   .input-bar {
     @apply appearance-none
      block w-full 
@@ -182,5 +237,5 @@
     text-xs
     italic
     capitalize;
-  }
+  } */
 }
